--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -64,6 +68,12 @@
         </activity>
         <activity
             android:name=".task.StandardActivity"
+            android:exported="true" />
+        <activity
+            android:name=".compose.wechat.HomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".mvi.MviActivity"
             android:exported="true" />
         <activity
             android:name=".architecture.ui.repo.RepoListActivity"
