--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ navigationAnimation = "0.36.0"
 okhttp = "4.12.0"
 retrofit = "2.11.0"
 coil = "3.0.4"
+workManager = "2.10.0"
 # leakcanary = "2.14"
 # bugly = "4.1.9.3"
 
@@ -64,6 +65,7 @@ androidx-browser = { group = "androidx.browser", name = "browser", version.ref =
 androidx-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "navigationAnimation" }
+androidx-work-manager = { module = "androidx.work:work-runtime-ktx", version.ref = "workManager" }
 
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
